--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "weather",
   "version": "1.0.0",
+  "type": "module",
   "main": "index.js",
+  "bin": {
+    "weather": "./build/index.js"
+  },
   "scripts": {
+    "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,5 +21,6 @@
   "devDependencies": {
     "@types/node": "^24.0.6",
     "typescript": "^5.8.3"
-  }
+  },
+  "files": ["build"]
 }
